<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveMySpot</string>
    <string name="action_settings">Settings</string>
    <string name="intro_wellcome">Welcome, </string>
    <string name="intro_text">SaveMySpot is program that will help you save, memorize and find important for you places, like location of the hotel in unfamiliar city, or the shop in which you have liked that cool item but did not had money to buy and decided to come back after pay-day, and many, many more&#8230;  </string>
    <string name="login_text">In order to continue, please login. </string>
    <string name="user_name">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login_btn">Login </string>
    <string name="register_btn">Register </string>
    <string name="enter_btn">Enter </string>
    <string name="currently_logged_user">Currently loged in user:  </string>
    <string name="log_off_btn">Log off </string>
    <string name="action_create_save">Create</string>
    <string name="action_create_title_edit_text">Enter Title</string>
    <string name="invalid_password">Invalid password. Please try again! </string>
    <string name="invalid_username_lenght">Username must be between 5 and 15 symbols </string>
    <string name="invalid_username_symbols">Username contains invalid symbols</string>
    <string name="fragment_spots_list_title">Spots</string>
    <string name="list_item_spot_title">Title:</string>
    <string name="list_item_spot_description">Description:</string>
    <string name="list_item_longitude">Longitude:</string>
    <string name="list_item_latitude">Latitude:</string>
    <string name="list_item_delete_btn">Delete</string>
    <string name="create_item_title">Enter Title</string>
    <string name="create_item_description">Enter Description</string>
    <string name="create_item_create_btn">Create</string>
    <string name="create_item_page_title">Add new Spot</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_item">ListItemActivity</string>
    <string name="currently_logged_user">Currently loged in user: </string>
    <string name="exception_incorect_username_or_password">Username or password is incorect!</string>
    <string name="exception_user_not_exists">User does not exists!</string>
    <string name="exception_already_exists">User already exists!</string>
    <string name="exception_username_length">Username must be between 5 and 15 symbols!</string>
    <string name="exception_invalid_password">Invalid Password</string>
    <string name="exception_null_username_or_password">Username or Password cannot be empty!</string>
    <string name="delete_item_alert_title">Delete list item </string>
    <string name="delete_item_alert_question">Are you sure that you want to delete this item? </string>
    <string name="delete_item_alert_yes">Yes </string>
    <string name="delete_item_alert_no">No </string>
    <string name="map_current_possition">You are here </string>
    <string name="menu_upload">Upload </string>
    <string name="menu_download">Download </string>
    <string name="http_error_title">Remote server error </string>
    <string name="http_error_text">Error occurred, while uploading spot! Please check your internet connection and try again!</string>
    <string name="http_error_ok">OK</string>
    <string name="http_error_spots_text">Error occurred, while downloading Spots!  Please check your internet connection and try again!</string>
     

</resources>